--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
     "jsx-a11y/label-has-associated-control": "off",
     "simple-import-sort/imports": "error",
     "newline-before-return": "error",
-    "max-len": "off"
+    "max-len": "off",
+    "linebreak-style": "off"
   },
   "ignorePatterns": [
     "postcss.config.js",
