--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": [
+    "next/core-web-vitals",
     "airbnb",
     "airbnb-typescript",
     "airbnb/hooks",
@@ -29,10 +30,28 @@
       }
     ],
     "jsx-a11y/label-has-associated-control": "off",
-    "simple-import-sort/imports": "error",
+    "simple-import-sort/imports": [
+      "error",
+      {
+        "groups": [
+          [
+            "^\\u0000",
+            "^@?\\w",
+            "^[^.]",
+            "^\\."
+          ]
+        ]
+      }
+    ],
     "newline-before-return": "error",
     "max-len": "off",
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "object-curly-newline": [
+      "error",
+      {
+        "ImportDeclaration": "never"
+      }
+    ]
   },
   "ignorePatterns": [
     "postcss.config.js",
